<resources>
    <string name="app_name">Room</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="description" />
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="marks">Marks</string>
    <string name="add">Add</string>
    <string name="add_first_name">Add First Name</string>
    <string name="add_last_name">Add Last Name</string>
    <string name="add_marks">Add Marks</string>
    <string name="update_student">Update student</string>
    <string name="delete">Delete</string>
    <string name="muasya">Muasya</string>
    <string name="ruth">Ruth</string>
    <string name="_1">1</string>
    <string name="_50">50</string>
    <string name="add_student">Add Student</string>
</resources>