<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".AddFragment">

    <EditText
        android:id="@+id/addFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/first_name"
        app:layout_constraintBottom_toTopOf="@+id/addLastName"
        app:layout_constraintStart_toStartOf="@+id/addLastName"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/addLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/last_name"
        app:layout_constraintBottom_toTopOf="@+id/addMarks"
        app:layout_constraintStart_toStartOf="@+id/addMarks"
        app:layout_constraintTop_toBottomOf="@+id/addFirstName" />

    <EditText
        android:id="@+id/addMarks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/add_marks"
        app:layout_constraintBottom_toTopOf="@+id/addDetails"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addLastName" />

    <Button
        android:id="@+id/addDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="441dp"
        android:text="@string/add_student"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/addMarks"
        app:layout_constraintTop_toBottomOf="@+id/addMarks" />
</androidx.constraintlayout.widget.ConstraintLayout>